# LocalLens

./: .gitignore  README.md  travel-assistant-docs.md
backend/: agent.py  embeddings.py  main.py  models.py  pyproject.toml
backend/services/model/: embeddings.py
backend/src/globals/: environment.py
frontend/: package-lock.json  package.json  schema.ts
frontend/actions/: chat.ts
frontend/app/: layout.tsx  page.tsx
frontend/app/(pages)/auth/: page.tsx
frontend/app/(pages)/chat/: page.tsx
frontend/app/(pages)/login/: page.tsx
frontend/app/(pages)/profile/: page.tsx
frontend/components/: login-form.tsx  navbar.tsx  signup-form.tsx
frontend/lib/actions/: auth.ts
frontend/styles/: globals.css
frontend/utils/supabase/: client.ts
