[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["James <jamesdankwah12@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
supabase = "^2.10.0"
pinecone = "^5.4.2"
axios = "^0.4.0"
openai = "^1.58.1"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
